# ratakierros-fi

./: .gitignore  CLAUDE.md  Dockerfile  README.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml  gpx trace feature plan.md  nginx.conf  ratakierros-fi.ts  vm-nginx.conf
.github/: dependabot.yml
.github/workflows/: android.yml  build.yml  ci.yml  ios.yml
android/: README.md  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/fi/ratakierros/: MainActivity.kt
android/app/src/main/kotlin/fi/ratakierros/auth/: AuthRepository.kt  LoginScreen.kt
android/app/src/main/kotlin/fi/ratakierros/location/: LocationProvider.kt
android/app/src/main/kotlin/fi/ratakierros/model/: AuthResponse.kt  Run.kt  Track.kt
android/app/src/main/kotlin/fi/ratakierros/network/: ApiClient.kt
android/app/src/main/kotlin/fi/ratakierros/ui/: ClosestTrackScreen.kt  LogRunScreen.kt  (+1 more)
android/app/src/main/res/values/: themes.xml
android/app/src/main/res/values-fi/: strings.xml
api/: Cargo.toml  Dockerfile  build.rs  ratakierros.db
api/src/: gpx_analyze.rs  lib.rs  lipas.rs  main.rs
api/tests/: finnish_records_endpoint.rs  gpx_analyze_endpoint.rs  leaderboard_endpoint.rs  me_endpoint.rs
e2e/: README.md  docker-compose.e2e.yml  seed.sql  smoke.sh
e2e/fixtures/: tiny.gpx
e2e/playwright/: package.json  playwright.config.ts
e2e/playwright/tests/: leaderboard.spec.ts  tracks.spec.ts
ios/: README.md  project.yml
ios/Sources/Ratakierros/: RatakierrosApp.swift
ios/Sources/Ratakierros/Auth/: AuthStore.swift  LoginView.swift
ios/Sources/Ratakierros/Location/: LocationProvider.swift
ios/Sources/Ratakierros/Models/: AuthResponse.swift  Run.swift  Track.swift
ios/Sources/Ratakierros/Networking/: APIClient.swift
ios/Sources/Ratakierros/Views/: ClosestTrackView.swift  LeaderboardView.swift  LogRunView.swift
public/: index.html
