[package]
name = "ratakierros-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
geo = "0.24.1"
geo-types = "0.7"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
urlencoding = "2.1"
tower-http = { version = "0.4", features = ["cors"] }
