[package]
name = "ratakierros-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
geo = "0.24.1"
geo-types = "0.7"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
tower-http = { version = "0.4", features = ["cors"] }
rusqlite = { version = "0.31", features = ["bundled"] }
jsonwebtoken = "9"
argon2 = "0.5"
rand_core = { version = "0.6", features = ["getrandom"] }
chrono = "0.4"
async-trait = "0.1"
